# placement-center

./: Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
config/: log4rs.yaml  placement-center.toml
scripts/: integration-testing.sh
src/cmd/: Cargo.toml
src/cmd/src/metadata-service/: server.rs
src/cmd/tests/: test.rs
src/common/base/: Cargo.toml
src/common/base/src/: errors.rs  http_response.rs  lib.rs  tool.rs
src/common/base/src/config/: placement_center.rs
src/placement-center/: Cargo.toml
src/placement-center/src/server/http/: index.rs  mod.rs  server.rs
src/protocol/: Cargo.toml
