
[workspace]
members = [
    "src/common/base",
    "src/placement-center",
    "src/cmd",
    "src/protocol",
]
resolver = "3"

[workspace.package]
name = "template"
version = "0.1.1"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.19"
log = "0.4.0"
log4rs = "1.2.0"
thiserror = "1.0.63"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"
tonic-build = "0.11.0"
prost = "0.12.3"
dashmap = "6.0.1"
rocksdb = "0.22.0"
bincode = "1.3.3"
tokio-util = { version = "0.7.9", features = ["codec"] }
mobc = "0.8.4"
openraft = { git = "https://github.com/databendlabs/openraft.git", features = [
    "serde",
    "type-alias",
    "loosen-follower-log-revert",
] }
byteorder = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }


## workspaces members
placement-center = { path = "src/placement-center" }
cmd = { path = "src/cmd" }
protocol = { path = "src/protocol" }
common-base = { path = "src/common/base" }
