[package]
name = "common-base"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
log.workspace = true
log4rs.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
axum.workspace = true
rocksdb.workspace = true
tonic.workspace = true
